--- a/src/app/pages/order/order.html
+++ b/src/app/pages/order/order.html
@@ -12,7 +12,7 @@
             <div class="main-fields">
                 <div class="main-field" id="fromField">
                     <div class="main-pin"></div>
-                    <input id="from" formControlName="form" placeholder="Откуда: начните вводить адрес"
+                    <input id="from" formControlName="from" placeholder="Откуда: начните вводить адрес"
                         autocomplete="off" />
                     <div class="main-ac" id="fromAc" role="listbox" aria-label="Подсказки адресов"></div>
                 </div>
